--- a/frontend/src/components/UI/Modals/RecordModal/RecordModal.scss
+++ b/frontend/src/components/UI/Modals/RecordModal/RecordModal.scss
@@ -76,10 +76,12 @@
         width: 100%;
         padding: 1rem;
         border-radius: 8px;
+        border: none;
         resize: vertical;
         font-family: inherit;
         font-size: 1.1rem;
         box-sizing: border-box;
+        margin-bottom: 20px;
 
         &:focus {
             outline: none;
@@ -102,7 +104,7 @@
         margin-bottom: 20px;
     }
 
-    &__select-problems {
+    &__select {
         margin-top: 20px;
         margin-bottom: 20px;
 
