--- a/frontend/src/features/account/TimeSlots/TimeSlots.scss
+++ b/frontend/src/features/account/TimeSlots/TimeSlots.scss
@@ -1,40 +1,42 @@
 @use "../../../assets/styles/variables.scss" as *;
 
 .time-slots {
-  &__group {
-    margin-bottom: 16px;
-  }
-
-  &__title {
-    font-weight: bold;
-    font-size: 1.1rem;
-    margin-bottom: 12px;
-    color: black;
-  }
+  margin-top: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 
   &__list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
-    gap: 8px;
+    gap: 20px;
+  }
+
+  &__none {
+    color: black;
+    font-size: 1.3rem;
+    font-weight: bold;
+    text-align: center;
   }
 
   &__item {
-    padding: 8px 12px;
+    padding: 10px 14px;
     border-radius: 12px;
     border: none;
-    background-color: #f2f5f9;
-    color: #333;
+    background-color: $profile-color;
     cursor: pointer;
-    font-size: 1.1rem;
-    transition: background 0.2s, color 0.2s;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+    transition: all 0.2s ease;
 
     &:hover {
-      background-color: #e0e7f1;
+      transform: translateY(-2px);
     }
 
     &--selected {
       background: $button-gradient;
-      color: #fff;
+      color: white;
     }
   }
 }
