--- a/frontend/src/pages/account/admin/EditUsefulInformations/EditUsefulInformations.scss
+++ b/frontend/src/pages/account/admin/EditUsefulInformations/EditUsefulInformations.scss
@@ -29,7 +29,7 @@
     font-size: 1.35rem;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 15px;
   }
 
   &__block {
@@ -39,7 +39,7 @@
     background: #e6f0fa;
     padding: 1rem 2rem;
     border-radius: 8px;
-    
+
     input {
       border: none;
       border-radius: 10px;
@@ -56,6 +56,29 @@
       margin: 10px 0;
       resize: vertical;
       box-sizing: border-box;
+    }
+  }
+
+  &__block-problem {
+    padding: 0.8rem 2.5rem;
+    background-color: $nav-color;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.3rem;
+
+    button {
+      background-color: $button-color;
+      border-radius: 10px;
+      color: white;
+      border: none;
+      padding: 0.6rem 1rem;
+    }
+
+    .delete {
+      background-color: $red-color;
+      margin-left: 10px;
     }
   }
 
@@ -106,6 +129,56 @@
       background-color: $button-color-hover;
     }
   }
+}
+
+.problems-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  &__item {
+    padding: 1rem 1.5rem;
+    border-radius: 10px;
+    background: $nav-color;
+    font-size: 1.4rem;
+    cursor: pointer;
+    transition: all 0.2s;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    &:hover {
+      background: #f0f0f0;
+    }
+
+    input {
+      padding: 1rem 1.5rem;
+      border-radius: 15px;
+      width: 50%;
+      text-align: center;
+      box-sizing: border-box;      
+    }
+
+    button {
+      background-color: $button-color;
+      border: none;
+      border-radius: 10px;
+      padding: 0.8rem 1rem;
+      color: white;
+      transition: transform 0.2s ease;
+
+      &:hover {
+        cursor: pointer;
+        transform: translateY(-2px);
+      }
+    }
+
+    .btn-delete {
+      margin-left: 10px;
+      background-color: $red-color;
+    }
+  }
+
 }
 
 // Стили для модального окна
